# WEB_modul2

./: Dockerfile  logs.txt  pyproject.toml
