[tool.poetry]
name = "web-modul2"
version = "0.1.0"
description = ""
authors = ["VadimTolkachov <vadim4eg8@gmail.com>"]
readme = "README.md"
packages = [{include = "web_modul2"}]

[tool.poetry.dependencies]
python = "^3.11"
datetime = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
